Fixed formatting errors

--- a/Project Report.ipynb
+++ b/Project Report.ipynb
@@ -3497,7 +3497,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "- From the “Relationship of Subscribe State and Played Hours” graph, we can see that a player being subscribed or not generally has a big influence on the mean hours of play that a player has. For players subscribed to the newsletter, the mean playtime was \t7.8830986 hours and for players not subscribed to the newsletter, the mean playtime was 0.5019231 hours. This is important for answering our specific question and intuitively it makes sense.\n",
+    "- From the “Relationship of Subscribe State and Played Hours” graph, we can see that a player being subscribed or not generally has a big influence on the mean hours of play that a player has. For players subscribed to the newsletter, the mean playtime was 7.8830986 hours and for players not subscribed to the newsletter, the mean playtime was 0.5019231 hours. This is important for answering our specific question and intuitively it makes sense.\n",
     "  \n",
     "-  Predicting hours of play is also useful for the developers, since they can use this information to increase sales, including sales of the newsletter. From this graph we can see that people subscribed to the newsletter will likely be much more active players than those who are not subscribed."
    ]
