Fixed more formatting issues

--- a/Project Report.ipynb
+++ b/Project Report.ipynb
@@ -3457,7 +3457,7 @@
    "source": [
     "- From the “Playtime vs. Age” graph, we can see that there isn’t really any linear correlation we can observe. If we were to outline the shape of the distribution, we can see that the distribution is right-skewed (long right tail) with its peak around the 17-18 year old age mark, implying that the older the players are the lower their overall playtime.\n",
     "\n",
-    "- From the “Playtime vs mean Age (distributions)” we can see that the hours of play peaks at around age 18 and then drops off significantly after age 20. This could be indicative of many things: a change of lifestyle, less interest in gaming, and more. This helps the developers better know their demographic and how they may better reach their audience. From this graph alone, it is clear that at least some of our predictors can be used to predict the playing hours of different groups of players.\n",
+    "- From the “Playtime vs mean Age (distributions)” we can see that the hours of play peaks at around age 18 and then drops off significantly after age 20. This could be indicative of many things: a change of lifestyle, less interest in gaming, and more.\n",
     "\n",
     "- This lack of a linear correlation and along with the relatively small size of the data leads us to utilise the KNN regression model as a method most appropriate to answer our question of predicting played_hours.\n"
    ]
@@ -3475,11 +3475,9 @@
    "id": "b39c1509-5c45-451f-a412-418519985131",
    "metadata": {},
    "source": [
-    "- From the “Playtime vs. Age Coloured by Experience” graph and the (insert mean playtime and Experience Level barchart title), we can see that as we move closer to the middle of the ordinal categorical variable Experience Level, the average playtime is a lot higher than if we were to compare it with the two polar Experience Level ends. \n",
+    "- From the “Playtime vs. Experience\" graph, we can observe that amateurs and regulars have a much higher average playtime than veterans, pros, and beginners.\n",
     "\n",
-    "- This is somewhat expected as with someone with prior experience playing/beating the game (multiple times), playing the game would become a lot more repetitive and as a consequence, more boring, making them less inclined to play the game. \n",
-    "\n",
-    "- This finding can help the stakeholders know who their main target audiences are and help developers make changes to the game that makes the game more approachable to newer players (beginners) or add updates to give players with more experience more in-game content."
+    "- This is somewhat expected as with someone with prior experience playing/beating the game (multiple times), playing the game would become a lot more repetitive and as a consequence, more boring, making them less inclined to play the game. "
    ]
   },
   {
@@ -3497,9 +3495,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "- From the “Relationship of Subscribe State and Played Hours” graph, we can see that a player being subscribed or not generally has a big influence on the mean hours of play that a player has. For players subscribed to the newsletter, the mean playtime was 7.8830986 hours and for players not subscribed to the newsletter, the mean playtime was 0.5019231 hours. This is important for answering our specific question and intuitively it makes sense.\n",
-    "  \n",
-    "-  Predicting hours of play is also useful for the developers, since they can use this information to increase sales, including sales of the newsletter. From this graph we can see that people subscribed to the newsletter will likely be much more active players than those who are not subscribed."
+    "- From the “Relationship of Subscribe State and Played Hours” graph, we can see that a player being subscribed or not generally has a strong influence on the average playtime of participants. For players subscribed to the newsletter, the mean playtime was 7.8830986 hours and for players not subscribed to the newsletter, the mean playtime was 0.5019231 hours. "
    ]
   },
   {
@@ -3517,11 +3513,11 @@
    "source": [
     "- From the “Relationship of gender and played hours” graph, there are significant differences in the average playtime of different gender groups.\n",
     "    - \"Non-binary\" group has the highest average playing time, which is close to or over 15 hours;\n",
-    "    - The average length of \"Prefer not to say\" and \"Female\" is also relatively high, around 10 to 12 hours;\n",
+    "    - The average playtime of \"Prefer not to say\" and \"Female\" is also relatively high, being around 10 to 12 hours;\n",
     "    - \"Male\" is relatively low, around 4 hours;\n",
-    "    - \"Agender\" and \"Two-spirited\" had the lowest average length, just under one hour.\n",
+    "    - \"Agender\" and \"Two-spirited\" had the lowest average playtime, which was just under one hour.\n",
     "\n",
-    "- Players who self-identify as different genders do differ in their average playing time, which may be a useful predictor."
+    "This demonstrates that players who identify as different genders do differ in their average playing time, which may be a useful predictor."
    ]
   },
   {
@@ -4323,7 +4319,7 @@
    "id": "550b1d5d-f9f8-41bd-b916-34e734083e9e",
    "metadata": {},
    "source": [
-    "Finally, we plotted the predicted time against the age of the participants. Note that due to our KNN-Regression model using many predictor variables, it is difficult to visualize what the prediction line actually looks like. "
+    "Finally, we plotted the predicted time against the age of the participants to get a sense of what the prediction line may look like. Note that due to our KNN-Regression model using many predictor variables, it is difficult to visualize what the prediction line actually looks like. "
    ]
   },
   {
@@ -4890,6 +4886,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9ed73f4c-3a49-4f8a-885c-fa720f7c504b",
+   "metadata": {},
+   "source": [
+    "From our visualization, we can see that the predictions don't seem to follow the points very well. Furthermore, our RMSE was 6.75, while our RMSPE was 15.41, meaning that our model did not succeed in predicting played_hours from experience, age, subscribe, and gender by our standards."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "15e9ae32-fe8b-43d7-a30b-4f247cfc23aa",
    "metadata": {},
    "source": [
@@ -4902,7 +4906,7 @@
    "metadata": {},
    "source": [
     "### Summary of Findings\n",
-    "Based on our visual analysis, we believef that the variables subscription status, experience, gender, and age could have an impact on prediction results, and we  used them as predictors to build a KNN regression model. However, the model's performance did not meet expectations, with a Root Mean Squared Prediction Error (RMSPE) of 15.41 compared to a RMSE value of value of 6.75. Therefore, we found that it is not possible to create a KNN-Regression model that used the variables experience, age, subscribe, and gender to predict played_hours in players.csv such that the RMSPE is no larger than 1.3 times the RMSE."
+    "Based on our visual analysis, we believed that the variables subscription status, experience, gender, and age could have an impact on prediction results, and we  used them as predictors to build a KNN regression model. However, the model's performance did not meet expectations, with a Root Mean Squared Prediction Error (RMSPE) of 15.41 compared to a RMSE value of 6.75. Therefore, we found that it is not possible to create a KNN-Regression model that used the variables experience, age, subscribe, and gender to predict played_hours in players.csv such that the RMSPE is no larger than 1.3 times the RMSE.\n"
    ]
   },
   {
@@ -4912,7 +4916,7 @@
    "source": [
     "### Reflection of Findings\n",
     "These findings ran contrary to what we were expecting, but we propose the following reasons as to why the model did not perform to our expectations. \n",
-    "Firstly, this error may stem from sample size insufficiency, seeing as there were only 194 observations. In addition, there was an dispropotionate amount of certain catagories in our factor variables compared to others (124 Male vs 2 Agender and 63 Amateurs vs 13 Pros), which could have led to poor predictions for the less represented catagories. ALso, by using normalization, we assume that all variables are equally important, when in reality this is most likely not the case. Another possible issue for the model could be outliers interferring with the predictions, such as the 4 players that played nearly 25 - 30 times as much as the average player. To optimize the model in the future, multiple options are possible. First, expand the data scale to increase sample size and diversity, ensuring sufficient, proportionate data; second, re-evaluate the effectiveness of each variable as a predictor to avoid interference with prediction results; and finally, detect and adjust outliers to reduce noise interference."
+    "Firstly, this error may stem from sample size insufficiency, seeing as there were only 194 observations. In addition, there was a disproportionate amount of certain categories in our factor variables compared to others (124 Male vs 2 Agender and 63 Amateurs vs 13 Pros), which could have led to poor predictions for the less represented categories. Also, by using normalization, we assume that all variables are equally important, when in reality this is most likely not the case. Another possible issue for the model could be outliers interfering with the predictions, such as the 4 players that played nearly 25 - 30 times as much as the average player. To optimize the model in the future, multiple options are possible. First, expand the data scale to increase sample size and diversity, ensuring sufficient, proportionate data; second, re-evaluate the effectiveness of each variable as a predictor to avoid interference with prediction results; and finally, detect and adjust outliers to reduce noise interference.\n"
    ]
   },
   {
@@ -4922,7 +4926,7 @@
    "source": [
     "### Impacts of Findings\n",
     "\n",
-    "Despite our findings not having much direct use for the researchers running PLAICraft due to the lack of success in our model, it may allow future researchers to understand what is necessary to create a successful model. I believe that our findings highlight the neccessity of 2 important things when it comes to creating an KNN-Regresssion, which are sufficient size of data, and having proportionate data. As a result, a successful model could be developed in the future. "
+    "Despite our findings not having much direct use for the researchers running PLAICraft due to the lack of success in our model, it may allow future researchers to understand what is necessary to create a successful model. I believe that our findings highlight the necessity of 2 important things when it comes to creating a KNN-Regression, which are sufficient size of data, and having proportionate data. As a result, a successful model could be developed in the future. \n"
    ]
   },
   {
@@ -4941,16 +4945,9 @@
     "Some future questions that come to mind from this project are:\n",
     "- Are certain variables more important than others when it comes to predicting hours played?\n",
     "- If certain variables are more important, which variables are most important in terms of predicting hours played?\n",
-    "- Can you predict a players willingness to buy a game from the the same predictors (age, gender, experience, subscribe)?\n"
+    "- Can you predict a player's willingness to buy a game from the same predictors (age, gender, experience, subscribe)?\n",
+    "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ef3aaf2f-b0a1-46f1-bd25-c15cb3ccab30",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
