Spelling error fix

--- a/Project Report.ipynb
+++ b/Project Report.ipynb
@@ -135,7 +135,7 @@
    "source": [
     "#### Loading Data: \n",
     "\n",
-    "First, we started with loading our data. We loaded our data from the url \"https://raw.githubusercontent.com/JasonCai0522/DSCI100_Datasets/refs/heads/main/players.csv\" to ensure that ohers can run our notebook even without the dataset downloaded on their device.\n"
+    "First, we started with loading our data. We loaded our data from the url \"https://raw.githubusercontent.com/JasonCai0522/DSCI100_Datasets/refs/heads/main/players.csv\" to ensure that others can run our notebook even without the dataset downloaded on their device.\n"
    ]
   },
   {
